--- a/cn.zh-cn/用户指南/主机监控.md
+++ b/cn.zh-cn/用户指南/主机监控.md
@@ -4,15 +4,13 @@
 
 -   **[Agent版本特性](Agent版本特性.md)**  
 
--   **[安装配置Agent](安装配置Agent.md)**  
+-   **[购买ECS时安装Agent（仅支持Linux）](购买ECS时安装Agent（仅支持Linux）.md)**  
 
--   **[在新购买的ECS中安装配置Agent（Linux）](在新购买的ECS中安装配置Agent（Linux）.md)**  
+-   **[在ECS/BMS中安装配置Agent（Linux）](在ECS-BMS中安装配置Agent（Linux）.md)**  
 
--   **[安装配置Agent（Linux）](安装配置Agent（Linux）.md)**  
+-   **[在ECS中批量安装Agent（Linux）](在ECS中批量安装Agent（Linux）.md)**  
 
--   **[安装配置Agent（Windows）](安装配置Agent（Windows）.md)**  
-
--   **[批量安装Agent（Linux）](批量安装Agent（Linux）.md)**  
+-   **[在ECS/BMS中安装配置Agent（Windows）](在ECS-BMS中安装配置Agent（Windows）.md)**  
 
 -   **[管理Agent](管理Agent.md)**  
 
