--- a/cn.zh-cn/用户指南/站点监控简介.md
+++ b/cn.zh-cn/用户指南/站点监控简介.md
@@ -63,7 +63,7 @@
 </table>
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
->-   响应时间、可用性、可用探测点数量、可用探测点百分比适用于HTTP、TCP、UDP、PING探测协议，丢包率仅适用于PING探测协议，HTTP响应码仅适用于HTTP探测协议。  
+>-   响应时间、可用性、可用探测点数量、可用探测点百分比适用于HTTP\(s\)、TCP、UDP、PING探测协议，丢包率仅适用于PING探测协议，HTTP响应码仅适用于HTTP\(s\)探测协议。  
 >-   后续会支持POP3、SMTP、DNS、FTP 等标准网络协议的互联网服务可用性。  
 
 ## 支持协议<a name="section2111132512314"></a>
@@ -77,9 +77,9 @@
 </th>
 </tr>
 </thead>
-<tbody><tr id="row1812412156242"><td class="cellrowborder" valign="top" width="30%" headers="mcps1.2.3.1.1 "><p id="p16945181052517"><a name="p16945181052517"></a><a name="p16945181052517"></a>HTTP</p>
+<tbody><tr id="row1812412156242"><td class="cellrowborder" valign="top" width="30%" headers="mcps1.2.3.1.1 "><p id="p16945181052517"><a name="p16945181052517"></a><a name="p16945181052517"></a>HTTP(s)</p>
 </td>
-<td class="cellrowborder" valign="top" width="70%" headers="mcps1.2.3.1.2 "><p id="p1822674911473"><a name="p1822674911473"></a><a name="p1822674911473"></a>对指定的URL/IP进行HTTP探测。</p>
+<td class="cellrowborder" valign="top" width="70%" headers="mcps1.2.3.1.2 "><p id="p1822674911473"><a name="p1822674911473"></a><a name="p1822674911473"></a>对指定的URL/IP进行HTTP(s)探测。</p>
 <p id="p1894541092511"><a name="p1894541092511"></a><a name="p1894541092511"></a>高级设置中支持GET/POST/HEAD 请求方式、cookie、header信息。</p>
 </td>
 </tr>
