--- a/cn.zh-cn/用户指南/自定义监控.md
+++ b/cn.zh-cn/用户指南/自定义监控.md
@@ -10,7 +10,7 @@
 4.  在“自定义监控”页面，可以查看当前用户通过API请求上报至云监控的相关数据，包括自定义上报的服务，指标等。
 
     >![](public_sys-resources/icon-note.gif) **说明：**   
-    >-   当用户通过API添加监控数据后，云监控界面才会显示自定义监控页签。  
+    >-   当用户通过API添加监控数据后，云监控界面才会显示自定义监控数据。  
     >-   添加监控数据请参见[添加监控数据（RESTful API）](http://support.huaweicloud.com/api-ces/zh-cn_topic_0032831274.html)、[添加监控数据（Java SDK）](https://support.huaweicloud.com/devg-sdk/zh-cn_topic_0072124679.html)、[添加监控数据（Python SDK）](https://support.huaweicloud.com/devg-sdk/zh-cn_topic_0072126389.html)。  
 
 5.  选择待查看的云服务资源所在行的“查看监控指标”，进入“监控指标”页面。
