--- a/cn.zh-cn/用户指南/主机监控简介.md
+++ b/cn.zh-cn/用户指南/主机监控简介.md
@@ -1,11 +1,12 @@
 # 主机监控简介<a name="ZH-CN_TOPIC_0084572333"></a>
 
-主机监控分为基础监控和操作系统监控，基础监控为ECS自动上报的监控指标。操作系统监控通过在弹性云服务器或裸金属服务器中安装Agent插件，为用户提供服务器的系统级、主动式、细颗粒度（间隔10s）监控服务。
+主机监控分为基础监控和操作系统监控，基础监控为ECS自动上报的监控指标。操作系统监控通过在弹性云服务器或裸金属服务器中安装Agent插件，为用户提供服务器的系统级、主动式、细颗粒度监控服务。
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
 >-   目前支持Linux操作系统和Windows操作系统。支持的系统请参见[Agent支持的系统有哪些？](https://support.huaweicloud.com/ces_faq/ces_faq_0024.html)。  
 >-   区域可选华北-北京一（cn-north-1）、华北-北京四（cn-north-4）、华南-广州（cn-south-1）、华东-上海二（cn-east-2）、亚太-香港（ap-southeast-1），亚太-曼谷（ap-southeast-2），其他暂不支持。  
->-   ECS规格建议使用“2核 | 2GB”或更高配置。  
+>-   华北-北京一（cn-north-1）、华北-北京四（cn-north-4）、华南-广州（cn-south-1）、华东-上海二（cn-east-2）、亚太-香港（ap-southeast-1）采集周期为10s，亚太-曼谷（ap-southeast-2）采集周期为1分钟。  
+>-   ECS规格建议Linux使用“2vCPUs | 4GB”、Windows使用“4vCPUs | 8GB”或更高配置。  
 >-   Agent使用中会占用系统端口，可以参考[手动配置Agent](手动配置Agent.md)中配置ClientPort与PortNum。若Agent端口与使用的业务端口冲突，可以参考[业务端口被Agent占用该如何处理](https://support.huaweicloud.com/ces_faq/ces_faq_0037.html)来处理。  
 
 ## 应用场景<a name="section460919022914"></a>
@@ -19,4 +20,18 @@
 ## 性能说明<a name="section136825414017"></a>
 
 Agent占用的系统资源很小，ECS中：CPU用率<5%、内存<100M，BMS中：CPU用率<5%、内存<100M。
+
+## 安装配置Agent场景说明<a name="section10300113320410"></a>
+
+安装Agent场景如下所示：
+
+-   购买ECS时安装Agent（Linux）请参见[购买ECS时安装Agent（仅支持Linux）](购买ECS时安装Agent（仅支持Linux）.md)。
+-   在ECS/BMS中安装配置Agent（Linux）请参见[在ECS/BMS中安装配置Agent（Linux）](在ECS-BMS中安装配置Agent（Linux）.md)。
+-   在ECS/BMS中安装配置Agent（Windows）参见[在ECS/BMS中安装配置Agent（Windows）](在ECS-BMS中安装配置Agent（Windows）.md)。
+-   在ECS中批量安装Agent（Linux）请参见[在ECS中批量安装Agent（Linux）](在ECS中批量安装Agent（Linux）.md)。
+
+安装配置Agent步骤如[图1](#fig81789101131)所示。
+
+**图 1**  安装配置Agent流程图<a name="fig81789101131"></a>  
+![](figures/安装配置Agent流程图.png "安装配置Agent流程图")
 
