--- a/cn.zh-cn/用户指南/站点监控.md
+++ b/cn.zh-cn/用户指南/站点监控.md
@@ -6,7 +6,7 @@
 
 -   **[创建告警规则](创建告警规则-1.md)**  
 
--   **[查看站点监控](查看站点监控.md)**  
+-   **[查看站点监控数据](查看站点监控数据.md)**  
 
 -   **[管理站点监控](管理站点监控.md)**  
 
