--- a/cn.zh-cn/API参考/创建告警规则.md
+++ b/cn.zh-cn/API参考/创建告警规则.md
@@ -83,7 +83,7 @@ POST /V1.0/\{project\_id\}/alarms
     </td>
     <td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.5.1.3 "><p id="p11810777184830"><a name="p11810777184830"></a><a name="p11810777184830"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="37.37373737373738%" headers="mcps1.2.5.1.4 "><p id="p17148866184830"><a name="p17148866184830"></a><a name="p17148866184830"></a>指标命名空间，，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
+    <td class="cellrowborder" valign="top" width="37.37373737373738%" headers="mcps1.2.5.1.4 "><p id="p17148866184830"><a name="p17148866184830"></a><a name="p17148866184830"></a>指标命名空间，，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，service.item总长度最短为3，最大为32。</p>
     <div class="note" id="note465851310395"><a name="note465851310395"></a><a name="note465851310395"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p1065810132399"><a name="p1065810132399"></a><a name="p1065810132399"></a>当alarm_type为（EVENT.SYS| EVENT.CUSTOM）时允许为空。</p>
     </div></div>
     </td>
