--- a/cn.zh-cn/API参考/查询告警规则列表.md
+++ b/cn.zh-cn/API参考/查询告警规则列表.md
@@ -161,7 +161,7 @@ GET /V1.0/\{project\_id\}/alarms
     </td>
     <td class="cellrowborder" valign="top" width="27.484949010935004%" headers="mcps1.2.4.1.2 "><p id="p44837749154921"><a name="p44837749154921"></a><a name="p44837749154921"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="37.879346357046316%" headers="mcps1.2.4.1.3 "><p id="p7979053154921"><a name="p7979053154921"></a><a name="p7979053154921"></a>指标命名空间，。</p>
+    <td class="cellrowborder" valign="top" width="37.879346357046316%" headers="mcps1.2.4.1.3 "><p id="p7979053154921"><a name="p7979053154921"></a><a name="p7979053154921"></a>指标命名空间。</p>
     </td>
     </tr>
     <tr id="row15081278153639"><td class="cellrowborder" valign="top" width="34.63570463201867%" headers="mcps1.2.4.1.1 "><p id="p13623999153639"><a name="p13623999153639"></a><a name="p13623999153639"></a>metric_name</p>
