--- a/cn.zh-cn/API参考/查询已关注指标（已废弃）.md
+++ b/cn.zh-cn/API参考/查询已关注指标（已废弃）.md
@@ -64,7 +64,7 @@ GET /V1.0/\{project\_id\}/favorite-metrics
     </td>
     <td class="cellrowborder" valign="top" width="27.686191979422425%" headers="mcps1.2.4.1.2 "><p id="p3018245152721"><a name="p3018245152721"></a><a name="p3018245152721"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.408160879223665%" headers="mcps1.2.4.1.3 "><p id="p1984935915480"><a name="p1984935915480"></a><a name="p1984935915480"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
+    <td class="cellrowborder" valign="top" width="53.408160879223665%" headers="mcps1.2.4.1.3 "><p id="p1984935915480"><a name="p1984935915480"></a><a name="p1984935915480"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，service.item总长度最短为3，最大为32。</p>
     </td>
     </tr>
     <tr id="row52817186152721"><td class="cellrowborder" valign="top" width="18.905647141353914%" headers="mcps1.2.4.1.1 "><p id="p50333653152721"><a name="p50333653152721"></a><a name="p50333653152721"></a>metric_name</p>
