--- a/cn.zh-cn/API参考/查询指标列表.md
+++ b/cn.zh-cn/API参考/查询指标列表.md
@@ -46,7 +46,7 @@ GET /V1.0/\{project\_id\}/metrics
     </td>
     <td class="cellrowborder" valign="top" width="18.23182318231823%" headers="mcps1.2.5.1.3 "><p id="p46188171163044"><a name="p46188171163044"></a><a name="p46188171163044"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.2.5.1.4 "><p id="p1529914911223"><a name="p1529914911223"></a><a name="p1529914911223"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
+    <td class="cellrowborder" valign="top" width="44.92449244924492%" headers="mcps1.2.5.1.4 "><p id="p1529914911223"><a name="p1529914911223"></a><a name="p1529914911223"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，service.item总长度最短为3，最大为32。</p>
     </td>
     </tr>
     <tr id="row14620943"><td class="cellrowborder" valign="top" width="21.292129212921292%" headers="mcps1.2.5.1.1 "><p id="p43445707"><a name="p43445707"></a><a name="p43445707"></a>metric_name</p>
