--- a/cn.zh-cn/API参考/查询监控数据.md
+++ b/cn.zh-cn/API参考/查询监控数据.md
@@ -47,6 +47,7 @@ GET /V1.0/\{project\_id\}/metric-data
     <td class="cellrowborder" valign="top" width="16.351635163516352%" headers="mcps1.2.5.1.3 "><p id="p4962713163547"><a name="p4962713163547"></a><a name="p4962713163547"></a>字符串</p>
     </td>
     <td class="cellrowborder" valign="top" width="47.93479347934794%" headers="mcps1.2.5.1.4 "><p id="p1984935915480"><a name="p1984935915480"></a><a name="p1984935915480"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。</p>
+    <p id="p1529914911223"><a name="p1529914911223"></a><a name="p1529914911223"></a>格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，service.item总长度最短为3，最大为32。</p>
     </td>
     </tr>
     <tr id="row14620943"><td class="cellrowborder" valign="top" width="20.3020302030203%" headers="mcps1.2.5.1.1 "><p id="p280237695641"><a name="p280237695641"></a><a name="p280237695641"></a>metric_name</p>
