--- a/cn.zh-cn/API参考/上报事件.md
+++ b/cn.zh-cn/API参考/上报事件.md
@@ -66,7 +66,7 @@ POST /V1.0/\{project\_id\}/events
     <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.5.1.3 "><p id="p552994614611"><a name="p552994614611"></a><a name="p552994614611"></a>字符串</p>
     </td>
     <td class="cellrowborder" valign="top" width="55.00000000000001%" headers="mcps1.2.5.1.4 "><p id="p1274165911813"><a name="p1274165911813"></a><a name="p1274165911813"></a>事件来源。</p>
-    <p id="p15543145912461"><a name="p15543145912461"></a><a name="p15543145912461"></a>格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
+    <p id="p15543145912461"><a name="p15543145912461"></a><a name="p15543145912461"></a>格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，service.item总长度最短为3，最大为32。</p>
     </td>
     </tr>
     <tr id="row77425951819"><td class="cellrowborder" valign="top" width="15%" headers="mcps1.2.5.1.1 "><p id="p17768203574712"><a name="p17768203574712"></a><a name="p17768203574712"></a>time</p>
