--- a/cn.zh-cn/API参考/云硬盘监控指标说明.md
+++ b/cn.zh-cn/API参考/云硬盘监控指标说明.md
@@ -55,7 +55,7 @@ SYS.EVS
 <td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p5350184455210"><a name="p5350184455210"></a><a name="p5350184455210"></a>该指标用于统计每秒从测量对象读取数据的请求次数。</p>
 <p id="p123505444524"><a name="p123505444524"></a><a name="p123505444524"></a>单位:请求/秒。</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p1035114415524"><a name="p1035114415524"></a><a name="p1035114415524"></a>≥ 0 requests/second</p>
+<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p1035114415524"><a name="p1035114415524"></a><a name="p1035114415524"></a>≥ 0 Requests/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="23.49%" headers="mcps1.1.6.1.5 "><p id="p17354144185215"><a name="p17354144185215"></a><a name="p17354144185215"></a>云硬盘</p>
 </td>
@@ -67,7 +67,7 @@ SYS.EVS
 <td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p3357144413526"><a name="p3357144413526"></a><a name="p3357144413526"></a>该指标用于统计每秒写到测量对象的请求次数。</p>
 <p id="p0358344135218"><a name="p0358344135218"></a><a name="p0358344135218"></a>单位:请求/秒。</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p3361144495218"><a name="p3361144495218"></a><a name="p3361144495218"></a>≥ 0 requests/second</p>
+<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p3361144495218"><a name="p3361144495218"></a><a name="p3361144495218"></a>≥ 0 Requests/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="23.49%" headers="mcps1.1.6.1.5 "><p id="p13362104445216"><a name="p13362104445216"></a><a name="p13362104445216"></a>云硬盘</p>
 </td>
