--- a/cn.zh-cn/API参考/批量查询监控数据.md
+++ b/cn.zh-cn/API参考/批量查询监控数据.md
@@ -70,7 +70,7 @@ POST /V1.0/\{project\_id\}/batch-query-metric-data
     </td>
     <td class="cellrowborder" valign="top" width="18.94%" headers="mcps1.2.5.1.3 "><p id="p30179270191739"><a name="p30179270191739"></a><a name="p30179270191739"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.2.5.1.4 "><p id="p28601804191739"><a name="p28601804191739"></a><a name="p28601804191739"></a>指标命名空间，格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
+    <td class="cellrowborder" valign="top" width="45.379999999999995%" headers="mcps1.2.5.1.4 "><p id="p28601804191739"><a name="p28601804191739"></a><a name="p28601804191739"></a>指标命名空间，格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，service.item总长度最短为3，最大为32。</p>
     </td>
     </tr>
     <tr id="row56089645191739"><td class="cellrowborder" valign="top" width="19.84%" headers="mcps1.2.5.1.1 "><p id="p46967368191739"><a name="p46967368191739"></a><a name="p46967368191739"></a>metric_name</p>
@@ -200,7 +200,7 @@ POST /V1.0/\{project\_id\}/batch-query-metric-data
     </td>
     <td class="cellrowborder" valign="top" width="19.153936545240892%" headers="mcps1.2.4.1.2 "><p id="p21725182191739"><a name="p21725182191739"></a><a name="p21725182191739"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.2.4.1.3 "><p id="p14909357191739"><a name="p14909357191739"></a><a name="p14909357191739"></a>指标命名空间，格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32。</p>
+    <td class="cellrowborder" valign="top" width="53.113983548766164%" headers="mcps1.2.4.1.3 "><p id="p14909357191739"><a name="p14909357191739"></a><a name="p14909357191739"></a>指标命名空间，格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，service.item总长度最短为3，最大为32。</p>
     </td>
     </tr>
     <tr id="row67075357191739"><td class="cellrowborder" valign="top" width="27.73207990599295%" headers="mcps1.2.4.1.1 "><p id="p64394799191739"><a name="p64394799191739"></a><a name="p64394799191739"></a>metric_name</p>
