--- a/cn.zh-cn/API参考/添加监控数据.md
+++ b/cn.zh-cn/API参考/添加监控数据.md
@@ -72,7 +72,7 @@ POST /V1.0/\{project\_id\}/metric-data
     </td>
     <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p66169057195021"><a name="p66169057195021"></a><a name="p66169057195021"></a>字符串</p>
     </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p6657193513177"><a name="p6657193513177"></a><a name="p6657193513177"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，总长度最短为3，最大为32，service不能为“SYS”。</p>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p6657193513177"><a name="p6657193513177"></a><a name="p6657193513177"></a>指标命名空间，例如弹性云服务器<a href="弹性云服务器监控指标说明.md#zh-cn_topic_0022067719_section24282572112133">命名空间</a>。格式为service.item；service和item必须是字符串，必须以字母开头，只能包含0-9/a-z/A-Z/_，service.item总长度最短为3，最大为32，service不能为“SYS”。</p>
     <p id="p58093390195021"><a name="p58093390195021"></a><a name="p58093390195021"></a>namespace不能为AGT.ECS、SERVICE.BMS。</p>
     </td>
     </tr>
