--- a/cn.zh-cn/API参考/裸金属服务器操作系统监控的监控指标说明.md
+++ b/cn.zh-cn/API参考/裸金属服务器操作系统监控的监控指标说明.md
@@ -428,7 +428,7 @@ SERVICE.BMS
 <td class="cellrowborder" valign="top" width="29.577042295770422%" headers="mcps1.1.6.1.3 "><p id="p1533618413312"><a name="p1533618413312"></a><a name="p1533618413312"></a>该指标用于统计每秒从测量对象读取数据的请求次数，以请求/秒为单位。</p>
 <p id="p962461822116"><a name="p962461822116"></a><a name="p962461822116"></a>单位：请求/秒</p>
 </td>
-<td class="cellrowborder" valign="top" width="9.85901409859014%" headers="mcps1.1.6.1.4 "><p id="p1881619213819"><a name="p1881619213819"></a><a name="p1881619213819"></a>≥0 Requests/Second</p>
+<td class="cellrowborder" valign="top" width="9.85901409859014%" headers="mcps1.1.6.1.4 "><p id="p1881619213819"><a name="p1881619213819"></a><a name="p1881619213819"></a>≥0 Requests/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="39.43605639436056%" headers="mcps1.1.6.1.5 "><p id="p111791834808"><a name="p111791834808"></a><a name="p111791834808"></a>测量对象：裸金属服务器</p>
 <p id="p1353512481819"><a name="p1353512481819"></a><a name="p1353512481819"></a>通过计算采集周期内/proc/diskstats中对应设备第四列数据的变化得出磁盘读操作速率。</p>
@@ -456,7 +456,7 @@ SERVICE.BMS
 <td class="cellrowborder" valign="top" width="29.577042295770422%" headers="mcps1.1.6.1.3 "><p id="p97894617316"><a name="p97894617316"></a><a name="p97894617316"></a>该指标用于统计每秒向测量对象写数据的请求次数。</p>
 <p id="p18579143612115"><a name="p18579143612115"></a><a name="p18579143612115"></a>单位：请求/秒</p>
 </td>
-<td class="cellrowborder" valign="top" width="9.85901409859014%" headers="mcps1.1.6.1.4 "><p id="p229029588"><a name="p229029588"></a><a name="p229029588"></a>≥0 Requests/Second</p>
+<td class="cellrowborder" valign="top" width="9.85901409859014%" headers="mcps1.1.6.1.4 "><p id="p229029588"><a name="p229029588"></a><a name="p229029588"></a>≥0 Requests/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="39.43605639436056%" headers="mcps1.1.6.1.5 "><p id="p581983919012"><a name="p581983919012"></a><a name="p581983919012"></a>测量对象：裸金属服务器</p>
 <p id="p6901628181812"><a name="p6901628181812"></a><a name="p6901628181812"></a>通过计算采集周期内/proc/diskstats中对应设备第八列数据的变化得出磁盘写操作速率。</p>
