--- a/cn.zh-cn/用户指南/弹性云服务器中操作系统监控的监控指标.md
+++ b/cn.zh-cn/用户指南/弹性云服务器中操作系统监控的监控指标.md
@@ -391,7 +391,7 @@
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0083516942_p107805542289"><a name="zh-cn_topic_0083516942_p107805542289"></a><a name="zh-cn_topic_0083516942_p107805542289"></a>该指标用于统计每秒从测量对象读取数据的请求次数。</p>
 <p id="p1044113915445"><a name="p1044113915445"></a><a name="p1044113915445"></a>单位：请求/秒</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0083516942_p1778413542289"><a name="zh-cn_topic_0083516942_p1778413542289"></a><a name="zh-cn_topic_0083516942_p1778413542289"></a>≥ 0 Requests/Second</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0083516942_p1778413542289"><a name="zh-cn_topic_0083516942_p1778413542289"></a><a name="zh-cn_topic_0083516942_p1778413542289"></a>≥ 0 Requests/s</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0083516942_p8787115413286"><a name="zh-cn_topic_0083516942_p8787115413286"></a><a name="zh-cn_topic_0083516942_p8787115413286"></a>测量对象：云服务器</p>
 <p id="p9794308367"><a name="p9794308367"></a><a name="p9794308367"></a>通过计算采集周期内/proc/diskstats中对应设备第四列数据的变化得出磁盘读操作速率。</p>
@@ -415,7 +415,7 @@
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="zh-cn_topic_0083516942_p3859105420283"><a name="zh-cn_topic_0083516942_p3859105420283"></a><a name="zh-cn_topic_0083516942_p3859105420283"></a>该指标用于统计每秒向测量对象写数据的请求次数。</p>
 <p id="p8945842145517"><a name="p8945842145517"></a><a name="p8945842145517"></a>单位：请求/秒</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0083516942_p6863125414286"><a name="zh-cn_topic_0083516942_p6863125414286"></a><a name="zh-cn_topic_0083516942_p6863125414286"></a>≥ 0 Requests/Second</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="zh-cn_topic_0083516942_p6863125414286"><a name="zh-cn_topic_0083516942_p6863125414286"></a><a name="zh-cn_topic_0083516942_p6863125414286"></a>≥ 0 Requests/s</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="zh-cn_topic_0083516942_p486825413282"><a name="zh-cn_topic_0083516942_p486825413282"></a><a name="zh-cn_topic_0083516942_p486825413282"></a>测量对象：云服务器</p>
 <p id="p2413945123613"><a name="p2413945123613"></a><a name="p2413945123613"></a>通过计算采集周期内/proc/diskstats中对应设备第八列数据的变化得出磁盘写操作速率。</p>
