--- a/cn.zh-cn/用户指南/裸金属服务器操作系统监控支持的监控指标.md
+++ b/cn.zh-cn/用户指南/裸金属服务器操作系统监控支持的监控指标.md
@@ -377,7 +377,7 @@
 <td class="cellrowborder" valign="top" width="30%" headers="mcps1.2.6.1.2 "><p id="p8723154175514"><a name="p8723154175514"></a><a name="p8723154175514"></a>该指标用于统计每秒从测量对象磁盘读取数据的请求次数。</p>
 <p id="p179753333915"><a name="p179753333915"></a><a name="p179753333915"></a>单位：请求/秒</p>
 </td>
-<td class="cellrowborder" valign="top" width="12%" headers="mcps1.2.6.1.3 "><p id="p172715415516"><a name="p172715415516"></a><a name="p172715415516"></a>≥ 0 Requests/Second</p>
+<td class="cellrowborder" valign="top" width="12%" headers="mcps1.2.6.1.3 "><p id="p172715415516"><a name="p172715415516"></a><a name="p172715415516"></a>≥ 0 Requests/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="p27303545559"><a name="p27303545559"></a><a name="p27303545559"></a>裸金属服务器</p>
 </td>
@@ -403,7 +403,7 @@
 <td class="cellrowborder" valign="top" width="30%" headers="mcps1.2.6.1.2 "><p id="p4755195416554"><a name="p4755195416554"></a><a name="p4755195416554"></a>该指标用于统计每秒向测量对象磁盘写数据的请求次数。</p>
 <p id="p444414443393"><a name="p444414443393"></a><a name="p444414443393"></a>单位：请求/秒</p>
 </td>
-<td class="cellrowborder" valign="top" width="12%" headers="mcps1.2.6.1.3 "><p id="p875985415559"><a name="p875985415559"></a><a name="p875985415559"></a>≥ 0 Requests/Second</p>
+<td class="cellrowborder" valign="top" width="12%" headers="mcps1.2.6.1.3 "><p id="p875985415559"><a name="p875985415559"></a><a name="p875985415559"></a>≥ 0 Requests/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="16%" headers="mcps1.2.6.1.4 "><p id="p67628546556"><a name="p67628546556"></a><a name="p67628546556"></a>裸金属服务器</p>
 </td>
